--- a/docs/.vitepress/theme/styles/custom.css
+++ b/docs/.vitepress/theme/styles/custom.css
@@ -4,10 +4,11 @@
   --vp-c-brand-2: #747bff;
 }
 
-/* .dark {
-  --tk-theme-color:#a8b1ff
-} */
-
 #comments{
   margin-top: 30px;
+}
+@media (min-width: 960px) {
+    .VPDoc[data-v-10119189] {
+        padding: 18px 32px 0;
+    }
 }
